--- a/src/css/wazimap-ng.webflow.css
+++ b/src/css/wazimap-ng.webflow.css
@@ -9702,18 +9702,17 @@ label {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  height: auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-transition: height 400ms cubic-bezier(.23, 1, .32, 1);
-  transition: height 400ms cubic-bezier(.23, 1, .32, 1);
+  -webkit-transition: max-height 400ms cubic-bezier(.23, 1, .32, 1);
+  transition: max-height 400ms cubic-bezier(.23, 1, .32, 1);
 }
 
 .data-category__h1_content--v2.is--closed {
-  height: 0px;
+  max-height: 0px;
 }
 
 .data-category__h2_content--v2 {
@@ -9722,18 +9721,17 @@ label {
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
-  height: auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-transition: height 400ms ease;
-  transition: height 400ms ease;
+  -webkit-transition: max-height 400ms ease;
+  transition: max-height 400ms ease;
 }
 
 .data-category__h2_content--v2.is--closed {
-  height: 0px;
+  max-height: 0px;
 }
 
 .data-category__h3_content--v2 {
