--- a/src/custom-css/mapchip.scss
+++ b/src/custom-css/mapchip.scss
@@ -1,4 +1,4 @@
-.filter__header_sub-indicator{
+.filter__header_sub-indicator {
   .filters__header_label {
     background: #dedede;
     padding: 2px 10px;
@@ -8,13 +8,14 @@
     max-width: fit-content;
     width: 100%;
   }
-  &:hover{
+
+  &:hover {
     cursor: pointer;
   }
 }
 
-.filters__header_toggle{
-  .fas{
+.filters__header_toggle {
+  .fas {
     font-size: 16px;
   }
 }
@@ -26,9 +27,11 @@
   align-items: center;
   border-radius: 2px;
   cursor: pointer;
-  &:hover{
+
+  &:hover {
     background-color: rgba(0, 0, 0, 0.06);
   }
+
   .fa {
     font-size: 16px;
     width: 100%;
@@ -57,7 +60,8 @@
   left: 50%;
   margin-left: -35px;
   bottom: -9px;
-  &:after{
+
+  &:after {
     background: #555 !important;
     content: "";
     position: absolute;
@@ -69,35 +73,57 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
+
   .top {
     top: -10px;
     bottom: auto;
-    &:after{
+
+    &:after {
       bottom: -20px;
       top: auto;
     }
   }
+
   .left {
     left: 20%;
   }
 }
 
 .notification-badges {
-    position:relative;
-    &:after {
-      position: absolute;
-      right: -10px;
-      top: -6px;
-      min-width: 5px;
-      min-height: 5px;
-      line-height: 8px;
-      padding: 5px;
-      color: #fff;
-      background-color: #2185d0;
-      font-size: 8px;
-      border-radius: 20px;
-      font-family: FontAwesome;
-      content: "\f01e";
-      border: solid 1px #2185d0;
-    }
+  position: relative;
+
+  &:after {
+    position: absolute;
+    right: -10px;
+    top: -6px;
+    min-width: 5px;
+    min-height: 5px;
+    line-height: 8px;
+    padding: 5px;
+    color: #fff;
+    background-color: #2185d0;
+    font-size: 8px;
+    border-radius: 20px;
+    font-family: FontAwesome;
+    content: "\f01e";
+    border: solid 1px #2185d0;
+  }
+}
+
+.choropleth-method-qMark {
+  background-color: #515151;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: 900;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  margin-left: 20px;
+  line-height: 20px;
+  cursor: pointer;
+}
+
+.choropleth-method-description {
+  margin-left: 10px;
+  font-size: 0.85em;
 }
