working on indicators

--- a/src/js/tabular-comparison/tabular-comparison.module.css
+++ b/src/js/tabular-comparison/tabular-comparison.module.css
@@ -97,6 +97,7 @@ body {
 .comparison-card.last {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .comparison-select {
