--- a/src/js/tabular-comparison/tabular-comparison.module.css
+++ b/src/js/tabular-comparison/tabular-comparison.module.css
@@ -97,6 +97,9 @@ body {
 .comparison-card.last {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.comparison-indicators .comparison-card.last {
     margin-bottom: 20px;
 }
 
