working on the result table

--- a/src/js/tabular_comparison/tabular-comparison.module.css
+++ b/src/js/tabular_comparison/tabular-comparison.module.css
@@ -142,3 +142,7 @@ body {
 .selected-geographies .geo-chip .MuiChip-deleteIcon path {
     color: #2F2F2F;
 }
+
+.MuiTableCell-root{
+    border:1px solid #ECECEC;
+}
